# ricochet

./: main.c  ricochet.c  ricochet.h
src/: CMakeLists.txt  build.sh  interesting_seeds.txt  main.c  ricochet.c  ricochet.h  ricochet.py  simple.cc  simple.h  split_maze.c
